--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ projectName = xp8demo
 version = 1.0.0-SNAPSHOT
 
 # XP App values
-appDisplayName = Vanilla Example
+appDisplayName = XP8 Demo Application
 appName = xp8demo
 vendorName = Acme Inc
 vendorUrl = https://example.com
